--- a/components/showcase/showcase.css
+++ b/components/showcase/showcase.css
@@ -1,5 +1,34 @@
 .showcase {
     height: 43rem;
     background: url(/assets/img/street.jpg) no-repeat 0 -43rem;
+}
+
+.showcase-outer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: inherit;
+}
+.showcase-info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.showcase-welcome {
+    color: #fafafa;
+    font-size: 7rem;
+    letter-spacing: .3rem;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+.showcase-welcome::first-letter {
+    color: #1E90FF;
    
+}
+
+.showcase-creator {
+    color: #fafafa;
+    font-size: 4rem;
+    text-shadow: 2px 2px 4px #000000;
 }
