--- a/components/showcase/showcase.html
+++ b/components/showcase/showcase.html
@@ -1,6 +1,10 @@
 <section class="showcase">
-    <div class="intro">
-        <h1>dsdsf</h1>
-        <p>sdfsdfsfd</p>
+    <div class="container">
+        <div class="showcase-outer">
+            <div class="showcase-info-container">
+                <h1 class="showcase-welcome">Welcome to the Gallery</h1>
+                <p class="showcase-creator">made by Anatolii Yatsenko</p>
+            </div>
+        </div>
     </div>
 </section>
