added folders and some small adjustments

--- a/components/app-nav-bar/appNavBar.html
+++ b/components/app-nav-bar/appNavBar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="nav_container">
       <div class="responsive_text">
-        <h3><span style="color:#1E90FF;">Responsive</span> image-list</h3>
+        <h3><span style="color:#1E90FF;">Responsive</span> gallery</h3>
       </div>
       <nav class="navigation_container">
         <ul class="list">
