added fundamental components for the gallery

--- a/components/gallery/gallery-sidemenu/gallery-sidemenu.html
+++ b/components/gallery/gallery-sidemenu/gallery-sidemenu.html
@@ -1,11 +1,22 @@
 <section class="gallery-sidemenu">
     <div class="gallery-sidemenu-link-container">
         <ul class="gallery-sidemenu-link-list">
-            <li class="gallery-sidemenu-link-item">NATURE</li>
-            <li class="gallery-sidemenu-link-item">SPORT</li>
-            <li class="gallery-sidemenu-link-item">RAIN</li>
-            <li class="gallery-sidemenu-link-item">CITY</li>
-            <li class="gallery-sidemenu-link-item">WATER</li>
+            <li class="gallery-sidemenu-link-item">
+                <a href="" class="gallery-sidemenu-link-a">NATURE</a>
+            </li>
+            <li class="gallery-sidemenu-link-item">
+                <a href="" class="gallery-sidemenu-link-a">Sport</a>
+            </li>
+            <li class="gallery-sidemenu-link-item">
+                <a href="" class="gallery-sidemenu-link-a">water</a>
+            </li>
+            <li class="gallery-sidemenu-link-item">
+                <a href="" class="gallery-sidemenu-link-a">rain</a>
+            </li>
+            <li class="gallery-sidemenu-link-item">
+                <a href="" class="gallery-sidemenu-link-a">women</a>
+            </li>  
+          
         </ul>
     </div>
 </section>
