added connections between components and services

--- a/components/gallery/gallery-previewer/gallery-previewer.html
+++ b/components/gallery/gallery-previewer/gallery-previewer.html
@@ -1,9 +1,10 @@
 <section class="gallery-previewer">
     <div class="gallery-previewer-container">
         <div class="gallery-previewer-composition">
-            <img src="../../../assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example">
-            <img src="./assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example">
-            <img src="../assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example">
+            <img ng-repeat="image in $ctrl.images track by $index" style='background-image:url({{image}})'  alt="" class="gallery-previewer-example">
+            <!-- <img ng-repeat="image in $ctrl.images" ng-src="../../../assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example"> -->
+            <!-- <img src="./assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example">
+            <img src="../assets/img/4k-nature-wallpaper-0049.jpg" alt="" class="gallery-previewer-example"> -->
         </div>
     </div>
 </section>
