--- a/components/gallery/gallery-sidemenu/gallery-sidemenu.html
+++ b/components/gallery/gallery-sidemenu/gallery-sidemenu.html
@@ -1,21 +1,9 @@
 <section class="gallery-sidemenu">
     <div class="gallery-sidemenu-link-container">
         <ul class="gallery-sidemenu-link-list">
-            <li class="gallery-sidemenu-link-item">
-                <a href="" class="gallery-sidemenu-link-a">NATURE</a>
+            <li class="gallery-sidemenu-link-item" ng-repeat="section in $ctrl.sections" ng-mouseover="$ctrl.getImages({section:section})" >
+                <a href="" class="gallery-sidemenu-link-a">{{section}}</a>
             </li>
-            <li class="gallery-sidemenu-link-item">
-                <a href="" class="gallery-sidemenu-link-a">Sport</a>
-            </li>
-            <li class="gallery-sidemenu-link-item">
-                <a href="" class="gallery-sidemenu-link-a">water</a>
-            </li>
-            <li class="gallery-sidemenu-link-item">
-                <a href="" class="gallery-sidemenu-link-a">rain</a>
-            </li>
-            <li class="gallery-sidemenu-link-item">
-                <a href="" class="gallery-sidemenu-link-a">women</a>
-            </li>  
           
         </ul>
     </div>
