--- a/components/gallery/gallery-previewer/gallery-previewer.css
+++ b/components/gallery/gallery-previewer/gallery-previewer.css
@@ -14,9 +14,10 @@
 
 .gallery-previewer-example {
     width: 35rem;
-    height: auto;
+    height: 20rem;
     position: absolute;
     z-index: 1;
+    background-size: cover;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: 3px;
     transition: all .2s;
