--- a/components/gallery/gallery-sidemenu/gallery-sidemenu.css
+++ b/components/gallery/gallery-sidemenu/gallery-sidemenu.css
@@ -1,6 +1,6 @@
 .gallery-sidemenu {
     flex-basis: 30%;
-    background-color: #333333;
+    background-color: inherit;
     
 }
 
@@ -16,7 +16,7 @@
     position: relative;
     padding: .5rem 0 .5rem 1.5rem;
     font-size: 2rem;
-    color: #fafafa;
+    color: #333333;
     cursor: pointer;
     /* border: 1px solid lightgrey; */
 }
@@ -60,7 +60,7 @@
 /* transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,  */
 .gallery-sidemenu-link-a {
     position: relative;
-    color:#fafafa;
+    color:#333333;
     text-decoration: none;
 }
 .gallery-sidemenu-link-list:nth-child(1){
