--- a/components/gallery/gallery.html
+++ b/components/gallery/gallery.html
@@ -4,8 +4,8 @@
             <h2>Gallery with different images</h2>
         </div>
         <div class="gallery-folder">
-            <app-gallery-sidemenu  style="flex-basis:30%;"></app-gallery-sidemenu>
-            <app-gallery-previewer style="flex-basis:70%;"></app-gallery-previewer>
+            <app-gallery-sidemenu sections="$ctrl.sections" get-images="$ctrl.onSectionChange(section)" style="flex-basis:30%;"></app-gallery-sidemenu>
+            <app-gallery-previewer images="$ctrl.images"  style="flex-basis:70%;"></app-gallery-previewer>
         </div>
         
     </div>
