--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,3 +1,17 @@
 .footer-section {
+    background-color: #eeeeee;
+   
     
+}
+
+.footer-info-container {
+    height: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-info-container > h2 {
+    font-size: 3rem;
+    color: #1E90FF;
 }
