--- a/components/section/section.html
+++ b/components/section/section.html
@@ -6,23 +6,26 @@
     <div class="carousel-container">
       <div class="carousel-main-image">
         <div class="carousel-count">1 / 6</div>
-        <img class="carousel-preview-image" ng-src="{{$ctrl.imgToPreview}}">
-      
-      
-        <a class="carousel-prev" ng-click="$ctrl.showNextImage()">❮</a>
-        <a class="carousel-next" ng-click="$ctrl.showPrevImage()">❯</a>
+        <div class="carousel-preview-image" ></div>
+        <!-- <img class="carousel-preview-image" ng-src="{{$ctrl.imgToPreview}}"> -->
+
+        <div class="carousel-actions-container">
+          <a class="carousel-prev" ng-click="$ctrl.showNextImage()">❮</a>
+          <a class="carousel-next" ng-click="$ctrl.showPrevImage()">❯</a>
+        </div>
+
       </div>
 
 
       <div class="carousel-caption-container">
-        <p class="carousel-caption-text"></p>
+        <p class="carousel-caption-text">hello</p>
       </div>
     </div>
 
 
     <div class="carousel-bottomt-slider">
       <div ng-repeat="image in $ctrl.images track by $index" class="carousel-bottom-item-container">
-        <img class="carousel-bottom-item" ng-src="{{image}}" ng-click="$ctrl.showImage(image)" alt="The Woods">
+        <div class="carousel-bottom-item" ng-style="{'background-image':'url({{image}})'}" ng-click="$ctrl.showImage(image)"></div>
       </div>
     </div>
   </section>
