--- a/components/section/section.css
+++ b/components/section/section.css
@@ -91,8 +91,8 @@
 }
 
 .carousel-bottom-item-container:not(:first-child), .carousel-bottom-item-container:not(:nth-child(3n + 1)) {
-  flex: 0 0 33%;
-  margin: 0 .25%  0 .25%;
+  flex: 0 0 33.33%;
+  margin: 0 0  0 0;
   height: 20rem;
   border: 2px solid #ccc;
   opacity: .5;
@@ -106,12 +106,12 @@
 
 
 .carousel-bottom-item-container:nth-child(3n){
-  margin: 0 0 0 .25%;
+  margin: 0 0 0 0;
 }
 
 .carousel-bottom-item-container:nth-child(3n + 1), .carousel-bottom-item-container:first-child {
-  flex: 0 0 33%;
-  margin: 0 .25% 0 0;
+  flex: 0 0 33.33%;
+  margin: 0 0 0 0;
   height: 20rem;
   border: 2px solid #ccc;
   opacity: .5;
@@ -126,5 +126,11 @@
 }
 
 .fadeArrow {
-  color: grey;
+  color: grey !important;
+}
+
+.carousel-bottom-item-container:hover {
+  cursor: pointer;
+  opacity: .9;
+  border-color: #1E90FF;
 }
