added copying to clipboard , style adjustments and nav links support

--- a/components/app-nav-bar/appNavBar.css
+++ b/components/app-nav-bar/appNavBar.css
@@ -31,3 +31,15 @@
     font-size: 2rem;
     padding: 1rem 2rem;
 } 
+
+.list > li > a:link,
+.list > li > a:visited,
+.list > li > a:active  {
+    color: #fafafa;
+    text-decoration: none;
+}
+
+.list > li > a:hover {
+    color: #1E90FF;
+    
+}
