--- a/components/app-nav-bar/appNavBar.html
+++ b/components/app-nav-bar/appNavBar.html
@@ -6,10 +6,10 @@
       </div>
       <nav class="navigation_container">
         <ul class="list">
-          <li>HOME</li>
-          <li>ABOUT US</li>
-          <li>SIGN IN</li>
-          <li>SIGN UP</li>
+          <li><a ui-sref="home">HOME</a></li>
+          <li><a ui-sref="home">ABOUT US</a></li>
+          <li><a ui-sref="home">SIGN IN</a></li>
+          <li><a ui-sref="home">SIGN UP</a></li>
         </ul>
       </nav>
     </div>
