--- a/components/gallery/gallery.html
+++ b/components/gallery/gallery.html
@@ -1,7 +1,7 @@
 <section class="gallery-section">
     <div class="container">
         <div class="gallery-heading">
-            <h2>Gallery with different images</h2>
+            <h2>Gallery of your dream</h2>
         </div>
         <div class="gallery-folder">
             <app-gallery-sidemenu sections="$ctrl.sections" get-images="$ctrl.onSectionChange(section)" style="flex-basis:30%;"></app-gallery-sidemenu>
