--- a/components/section/section.html
+++ b/components/section/section.html
@@ -1,9 +1,11 @@
 <section class="section-container">
   <!-- Main section -->
   <section class="carousel-section">
+     
     <div class="carousel-container">
-      <div class="carousel-main-image">
         
+      <div class="carousel-main-image">
+          <h2 class="carousel-section-message">{{$ctrl.section}}</h2>
         <!-- Main image -->
         <div class="carousel-preview-image" ng-style="{'background-image':'url(' + $ctrl.images[$ctrl.imgToPreview] + ')'}"></div>
 
