--- a/components/gallery/gallery-sidemenu/gallery-sidemenu.html
+++ b/components/gallery/gallery-sidemenu/gallery-sidemenu.html
@@ -4,7 +4,7 @@
             <svg ng-click="$ctrl.showPrevSections()" class="up-button"><use xlink:href="#icon-circle-up"></use></svg>
         <ul class="gallery-sidemenu-link-list">
             <li class="gallery-sidemenu-link-item" ng-repeat="section in $ctrl.sections track by $index">
-                <a ui-sref="section({section: section})" ng-mouseover="$ctrl.getImages({section:section});  $ctrl.startAnimation($event)"
+                <a ui-sref="section({section: section})" ng-mouseover="$ctrl.getImages({section:section})"
                     class="gallery-sidemenu-link-a">{{section}}</a>
             </li>
 
